flapivor/tests/m1/hopix/parser/bad/parse1-bad.hopix
def f (x) = case x { }
